# Student-Management-Application

./: .gitignore  README.md
backend/: initialize_database.py  pyproject.toml
backend/apps/attendance/: models.py  serializer.py  urls.py  views.py
backend/apps/attendance/migrations/: 0001_initial.py
backend/apps/audit/: models.py  serializer.py  urls.py  utils.py  views.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/courses/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/courses/migrations/: 0001_initial.py  0002_alter_course_unique_together_and_more.py
backend/apps/grades/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/grades/migrations/: 0001_initial.py  0002_assessment_name.py  0003_alter_assessment_options_alter_grade_options.py
backend/apps/reports/: urls.py  views.py
backend/apps/reports/templates/reports/: attendance_report.html  grade_report.html
backend/apps/scheduling/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/scheduling/migrations/: 0001_initial.py  0002_alter_classsession_unique_together.py
backend/apps/students/: models.py  serializer.py  urls.py  views.py
backend/apps/students/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializer.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/core/: pagination.py  settings.py  urls.py
frontend/: components.json  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
(+62 files in other folders)
